<resources>
    <string name="app_name">GloChat</string>
    <string name="title_activity_base">BaseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="media">Media</string>
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="following">Following</string>
    <string name="popular">Popular</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="verify_number">Verify Phone Number</string>
    <string name="sms_verify_sub_header">waiting to automatically detect SMS code sent to</string>
    <string name="wrong_number">wrong number?</string>
    <string name="resend_sms">Resend SMS</string>
    <string name="count_down_time">3:00</string>
    <string name="icon_like_fill">&#xe60d;</string>
    <string name="icon_comment">&#xe621;</string>
    <string name="icon_more">&#xe61b;</string>
    <string name="onboard_text_first">Have more fun with amazing videos.</string>
    <string name="onboard_text_second">Enjoy seamless Instant Messaging and Voice/Video Calls</string>
    <string name="onboard_text_third">Time to take, edit and share amazing photos.</string>
    <string name="onboard_text_fourth">Now you can communicate with the world freely.</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">313679686596007</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb313679686596007</string>
    <string name="facebook_app_id">313679686596007</string>
    <string name="fb_login_protocol_scheme">fb313679686596007</string>
    <string name="action_settings">Settings</string>
    <string name="call">call</string>
    <string name="photo">photo</string>
    <string name="video">video</string>
    <string name="last_message">last message</string>
    <string name="continue_with_google">continue with google</string>
    <string name="continue_with_facebook">continue with facebook</string>
    <string name="or">or</string>
    <string name="continue_with_email">continue with email</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="continue_with_phone">sign up with phone number</string>
    <string name="storage_link">gs://glochat-5fdb1.appspot.com</string>
    <string name="proceed">PROCEED</string>
    <string name="likes">likes</string>
    <string name="photos">""</string>
    <string name="videos">""</string>
    <string name="trans">trans</string>
    <string name="image_button">Image Button</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="imageButton">Image Button</string>
    <string name="user_blocked">User Blocked</string>
    <string name="type_a_message">Type here</string>
    <string name="no_recent_chats_click_the_button_below_to_start_chatting">No recent chats, click the button below to start chatting.</string>
    <string name="start_chat">Start Chat</string>
    <string name="notification">Notification</string>
    <string name="view">View</string>
    <string name="camera">Camera</string>
    <string name="contacts">Contacts</string>
    <string name="audio">Audio</string>
    <string name="images">Images</string>
    <string name="document">Document</string>
    <string name="phone_number">Phone Number</string>
    <string name="full_name">Full Name</string>
    <string name="swipe_up">Swipe Up</string>
    <string name="swipe_left_or_right_for_filters">Swipe left or right for filters</string>
    <string name="be_the_first_to_comment">Be the first to comment:</string>
    <string name="your_comment">your comment</string>
    <string name="comments">comments :</string>
    <string name="view_all">view all</string>
    <string name="image_view">Image View</string>
    <string name="select_images">Select Images</string>
    <string name="post">Post</string>
    <string name="picture_post">Picture Post</string>
    <string name="caption_here">Caption here</string>
    <string name="no_post_yet_you_can_make_your_first_by_clicking_the_button_below">No post yet, you can make your first post by clicking the button below</string>
</resources>