<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/onboard_background"
    android:fillViewport="true"
    android:gravity="center"
    android:orientation="vertical"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/onboard_background"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/activity_create_profile_image_layout_setup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:elevation="2dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/activity_create_profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/profile_placeholder" />

            <ProgressBar
                android:id="@+id/activity_create_profile_image_loader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="invisible" />

            <ImageButton
                android:id="@+id/profile_pic"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="70dp"
                android:background="@drawable/accent_circle"
                android:contentDescription="@string/image_button"
                android:src="@drawable/ic_grey_camera_pick" />

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/full_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/full_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/username">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textPersonName"
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/phone_number">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="phone"
                android:maxLength="11"
                android:id="@+id/activity_create_profile_phone_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:id="@+id/proceed_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="@dimen/fui_body_padding_bottom"
            android:background="@drawable/button_gradient"
            android:elevation="4dp">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:indeterminateTint="@color/white"
                android:visibility="gone" />

            <TextView
                android:id="@+id/proceed_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/proceed"
                android:textColor="@drawable/login_button_text_selector" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>