<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/choose_pic_frag_root_id"
    android:background="@color/black"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/choose_pic_frag_appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical">


            <ImageButton
                android:contentDescription="@string/imageButton"
                android:id="@+id/choose_pic_frag_cancel_btn"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_arrow_back_white_24"
                android:tint="@android:color/white" />

            <TextView
                android:id="@+id/nameToolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/select_images"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="17sp"
                android:textColor="@android:color/white" />


            <TextView
                android:visibility="gone"
                android:id="@+id/selectedImgCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"
                 />

            <Button
                android:clickable="true"
                android:foreground="?android:selectableItemBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:background="@android:color/transparent"
                android:padding="5dp"
                android:id="@+id/choose_pic_frag_btn_next"
                android:textAllCaps="true"
                android:enabled="false"
                android:textColor="@color/white"
                android:alpha="0.5"/>

        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choose_pic_frag_recycler_view" />

</LinearLayout>