<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/wavy_background_0"
            android:scaleType="centerCrop"/>

    </FrameLayout>
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Let's Get Started!"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Create a GloChat account to continue"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:id="@+id/facebookSignInButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_login_button_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/login_screen_button_margin"
            android:background="@drawable/facebook_button_bg"
            android:elevation="4dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:paddingLeft="@dimen/large_intrinsic_padding"
                android:paddingRight="@dimen/large_intrinsic_padding"
                app:srcCompat="@drawable/ic_bt_login_facebook" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/continue_with_facebook"
                android:textColor="@drawable/login_button_text_selector" />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/googleSignInButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_login_button_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/login_screen_button_margin"
            android:background="@drawable/google_button_bg"
            android:elevation="4dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:paddingLeft="@dimen/large_intrinsic_padding"
                android:paddingRight="@dimen/large_intrinsic_padding"
                app:srcCompat="@drawable/google_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/continue_with_google"
                android:textColor="@drawable/login_button_text_selector" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/emailSignInButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_login_button_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/login_screen_button_margin"
            android:background="@drawable/email_button_bg"
            android:elevation="4dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:paddingLeft="@dimen/large_intrinsic_padding"
                android:paddingRight="@dimen/large_intrinsic_padding"
                app:srcCompat="@drawable/email_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/continue_with_email"
                android:textColor="@drawable/login_button_text_selector" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/or"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/phoneSignInButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_login_button_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/login_screen_button_margin"
            android:background="@drawable/onboard_background"
            android:elevation="4dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:paddingLeft="@dimen/large_intrinsic_padding"
                android:paddingRight="@dimen/large_intrinsic_padding"
                app:srcCompat="@drawable/phone_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/continue_with_phone"
                android:textColor="@drawable/login_button_text_selector" />

        </RelativeLayout>

    </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
